@@ -16,7 +16,6 @@ import java.time.temporal.TemporalAdjusters;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @RequiredArgsConstructor
@@ -81,6 +80,6 @@ public class StatisticsService {
     private List<MonthlyOrderStatistics> convertToDTO(List<MonthlyOrderStatisticsVo> monthlyStatisticsVoList) {
         return monthlyStatisticsVoList.stream()
                 .map(MonthlyOrderStatistics::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
